Fixed the h1 font size on mobile (portals)

--- a/_portails.scss
+++ b/_portails.scss
@@ -119,6 +119,11 @@
             font-weight   : 800;
             letter-spacing: 1.25px;
             font-size     : 3.75rem;
+
+            // When in mobile mode
+            @media (max-width: 800px) {
+                font-size: 2.75rem;
+            }
         }
 
         h2 {
